# server

./: Cargo.toml  Dockerfile  Justfile  README.md  config.json  config.toml  config.toml.example
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: args.rs  builder.rs  main.rs  profiles.rs
client/src/profiles/: mod.rs
common/: Cargo.toml
common/src/: clip.rs  config.rs  lib.rs
common/src/auth/: mod.rs  request.rs  response.rs
debian/: mpclipboard-server.service
server/: Cargo.toml
server/debian/: shared-clipboard-server.service
server/src/: config.rs  main.rs  map_of_streams.rs  server.rs  store.rs
src/: args.rs  auth.rs  client.rs  clip.rs  config.rs  event_loop.rs  lib.rs  main.rs  map_of_streams.rs  multiplexer.rs  name.rs  payload.rs  pending.rs  select_all_identified.rs  server.rs  store.rs  stream_id.rs  ws_wrapper.rs
src/handshake/: codec.rs  mod.rs
