[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Ilya Bylich"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
futures-util = { version = "0.3", features = ["sink"] }
http = "1.3.1"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
shared-clipboard-common = { git = "https://github.com/iliabylich/shared-clipboard-common.git" }
