[package]
name = "mpclipboard-server"
version = "0.1.0"
edition = "2024"
authors = ["Ilya Bylich"]
license = "MIT"

[dependencies]
mpclipboard-common = { git = "https://github.com/mpclipboard/common.git" }
anyhow = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "net",
    "macros",
    "rt",
] }
pretty_env_logger = { version = "0.5", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
uuid = { version = "1", default-features = false, features = ["std", "v4"] }
log = { version = "0.4", default-features = false }
toml = "0.8"
tokio-websockets = { version = "0.11", features = [
    "server",
    "ring",
    "fastrand",
] }

[package.metadata.deb]
assets = [
    [
        "target/release/mpclipboard-server",
        "usr/bin/mpclipboard-server",
        "755",
    ],
    [
        "debian/mpclipboard-server.service",
        "lib/systemd/system/mpclipboard-server.service",
        "644",
    ],
]
