[package]
name = "mpclipboard-server"
version = "0.1.2"
edition = "2024"
authors = ["Ilya Bylich"]
license = "MIT"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["net", "macros", "rt", "fs"] }
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", features = ["sink"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
toml = "0.8"
tokio-websockets = { version = "0.11", features = [
    "server",
    "ring",
    "fastrand",
] }
tokio-util = "0.7"
pin-project-lite = "0.2"
tokio-stream = "0.1"

[package.metadata.deb]
assets = [
    [
        "target/release/mpclipboard-server",
        "usr/bin/mpclipboard-server",
        "755",
    ],
    [
        "debian/mpclipboard-server.service",
        "lib/systemd/system/mpclipboard-server.service",
        "644",
    ],
]
