[package]
name = "shared-clipboard-test-client"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
shared-clipboard-common = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
http = { workspace = true }
tokio-websockets = { version = "0.11", features = [
    "ring",
    "client",
    "fastrand",
    "rustls-webpki-roots",
] }
tokio-rustls = "0.26.2"
webpki-roots = "1.0.0"
rustls = "0.23.27"
