[package]
name = "shared-clipboard-server"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }
tokio-websockets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
pin-project-lite = { workspace = true }
