[package]
name = "shared-clipboard-server"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
tokio = { workspace = true }
pretty_env_logger = { workspace = true }
tokio-websockets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }

[package.metadata.deb]
assets = [
    [
        "target/release/shared-clipboard-server",
        "usr/bin/shared-clipboard-server",
        "755",
    ],
    [
        "debian/shared-clipboard-server.service",
        "lib/systemd/system/shared-clipboard-server.service",
        "644",
    ],
]
